fix(matches_overview): fix styling of the cards on small screens

--- a/src/sass/pages/_MatchesOverview.scss
+++ b/src/sass/pages/_MatchesOverview.scss
@@ -39,23 +39,23 @@
         }
 
         header {
-            width: 30%;
+            width: 100%;
 
             h2 {
                 font-size: 120%;
-                margin-bottom: getSpacing(1);
+                margin-bottom: getSpacing(0.5);
             }
 
             img {
-                max-width: getSpacing(5);
+                max-width: getSpacing(7);
                 border-radius: 50%;
-                min-height: getSpacing(5);
+                min-height: getSpacing(7);
             }
         }
 
         p {
-            margin: getSpacing(3) 0 0;
-            width: 70%;
+            margin: getSpacing(0.5) 0 0;
+            width: 100%;
 
             &::first-letter {
                 text-transform: capitalize;
